removed resume from nav, fixed interests icon  spacing issue for smaller screens

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -36,6 +36,8 @@
     
     .interests {
 
+        width: 100%;
+
         .icons {
             display: flex;
             justify-content: space-between;
@@ -46,7 +48,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        width: 20%;
+        width: 15%;
 
             i {
                 @include fontSize(35);
