--- a/styles/styles.css
+++ b/styles/styles.css
@@ -607,6 +607,9 @@ nav .socials li:hover .linkedIn, nav .socials li:focus .linkedIn {
 .about .aboutText {
   margin: 50px 0px;
 }
+.about .interests {
+  width: 100%;
+}
 .about .interests .icons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -625,7 +628,7 @@ nav .socials li:hover .linkedIn, nav .socials li:focus .linkedIn {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  width: 20%;
+  width: 15%;
 }
 .about .interests li i {
   font-size: 35px;
@@ -1057,6 +1060,15 @@ nav .socials li:hover .linkedIn, nav .socials li:focus .linkedIn {
   .header .textContainer h1 {
     font-size: 50px;
     font-size: 2.5rem;
+  }
+
+  .about .interests .icons i {
+    font-size: 30px;
+    font-size: 1.5rem;
+  }
+  .about .interests .icons li {
+    font-size: 18px;
+    font-size: 0.9rem;
   }
 
   .skills .topRow .skillBox, .skills .bottomRow .skillBox {
